# desafio-fidelity

./: LICENSE
service/: docker-compose.yml  pyproject.toml
service/src/: main.py
